5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1578_1559.log
== SUBMITION (2019-03-15 13:25:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.???)
-- EXECUTION TIME:
0.138783
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:26:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.280053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:27:30) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper)
-- EXECUTION TIME:
0.143033
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7fbac53294a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:28:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.204795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 13:28:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:29:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper"Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.138821
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.upper"Ada Lovelace foi a primeira programadora da historia.")
                                                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:31:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.147692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:31:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("frase" .upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.162434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print("frase" .upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 13:31:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:32:28) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.189924
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:33:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper)
-- EXECUTION TIME:
0.138745
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7fedb582e4a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:43:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper"frase")
-- EXECUTION TIME:
0.181785
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.upper"frase")
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:43:28) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("frase".upper)
-- EXECUTION TIME:
0.200108
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f911550d1b8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 13:43:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("frase".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f8a741445a8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:43:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("frase".upper"frase")
-- EXECUTION TIME:
0.135365
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("frase".upper"frase")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:43:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper"frase")
-- EXECUTION TIME:
0.111891
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.".upper"frase")
                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 13:44:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper"frase")
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.".upper"frase")
                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:44:29) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper "frase")
-- EXECUTION TIME:
0.167831
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper "frase")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:44:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.upper" "frase")
-- EXECUTION TIME:
0.213499
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia.upperfrase
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:44:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.upper")
-- EXECUTION TIME:
0.146894
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia.upper
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:45:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("frase.upper")
-- EXECUTION TIME:
0.211292
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:57:59) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.12793
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:58:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:58:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:58:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.185879
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
